# dl-larvae

./: .gitignore  README.md  pyproject.toml
notebooks/: basic_convnet.ipynb  fifth_convnet.ipynb  fourth_convnet.ipynb  pre_trained.ipynb  pre_trained_2.ipynb  pytorch-convnet.ipynb  second_convnet.ipynb  third_convnet.ipynb
