[tool.poetry]
name = "dl-larvae"
version = "0.1.0"
description = ""
authors = ["pedro-rodrigues18 <hrpereira.pedro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.1"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
notebook = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
